<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cost Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="editText1">Log In</string>
    <string name="editText2">Password</string>
    <string name="Submit">Submit</string>
    <string name="New_Log_In">Create LogIn</string>
    <string name="test_second_activity">This is second activity text!</string>
    <string name="button_cost">Cost</string>
    <string name="button_income">Income</string>
    <string name="button_debt">Debt</string>
    <string name="button_loan">Loan</string>
    <string name="test_cost_activity">This is cost activity text!</string>
    <string name="insert_cost">Insert Cost</string>
    <string name="view_cost">View Cost</string>
    <string name="insert_record">Insert Record</string>
    <string name="view_record">View Record</string>
    <string name="delete_record">Delete Record</string>
    <string name="update_record">Update Record</string>
    <string name="save_record">Save Record</string>
    <string name="test_insert_cost">This is insert cost fragment text!</string>
    <string name="user_insert_cost_grid">Insert Cost Data</string>
    <string name="user_insert_cost_date">Insert Date</string>
    <string name="user_insert_cost_item">Insert Item</string>
    <string name="user_insert_cost_amount">Insert Amount</string>
    <string name="insert_cost_info_button">Insert Cost Info</string>
    <string name="insert_info_button">Insert Data</string>
    <string name="mainTable">mainTable</string>
    <string name="create_new_user_btn">Create New User</string>
    <string name="forgot_password_btn">Forgot Password? </string>
    <string name="shared_cost">Shared Cost </string>
    <string name="statement">Statement </string>
    <string name="bank_balance">Updated Bank Balance</string>
    <string name="bank_balance_date">Insert Date of Balance </string>
    <string name="account_one">Account 1 </string>
    <string name="account_two">Account 2 </string>
    <string name="account_three">Account 3 </string>
    <string name="view_statement">View Statement </string>
    <string name="statement_date_start">Start Date</string>
    <string name="statement_date_end">End Date</string>
    

</resources>
