<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@string/user_insert_cost_grid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.costtracker_version_02.WelcomeScreenActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_insert_cost" />

    <EditText
        android:id="@+id/bankdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/user_insert_cost_date"
        android:inputType="date"
        android:text="@string/user_insert_cost_date" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/amountData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bankBalanceAmt"
        android:layout_below="@+id/bankBalanceAmt"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/user_insert_cost_amount" />

    <EditText
        android:id="@+id/bankBalanceAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bankdateData"
        android:layout_below="@+id/bankdateData"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/user_insert_cost_item" />

    <Button
        android:id="@+id/record_save_button"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amountData"
        android:layout_below="@+id/amountData"
        android:layout_marginTop="73dp"
        android:text="@string/save_record" />

</RelativeLayout>