<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/delete_record_bt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.costtracker_version_02.WelcomeScreenActivity" >

    <Button
        android:id="@+id/stat_acc_two_bt"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stat_acc_one_bt"
        android:layout_below="@+id/stat_acc_one_bt"
        android:text="@string/account_two" />

    <Button
        android:id="@+id/stat_acc_three_bt"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stat_acc_two_bt"
        android:layout_below="@+id/stat_acc_two_bt"
        android:text="@string/account_three" />

    <Button
        android:id="@+id/stat_view_statement_bt"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stat_acc_three_bt"
        android:layout_below="@+id/stat_acc_three_bt"
        android:text="@string/view_statement" />

    <Button
        android:id="@+id/stat_acc_one_bt"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stat_end_date"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/account_one" />

    <EditText
        android:id="@+id/stat_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stat_view_statement_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/statement_date_start" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/stat_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stat_start_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/statement_date_end" />

</RelativeLayout>