<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.costtracker_version_02.WelcomeScreenActivity" >

    <EditText
        android:id="@+id/bankdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bankBalanceAmt"
        android:ems="10"
        android:text="@string/editText1" />

    <EditText
        android:id="@+id/bankBalanceAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bankdateData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/editText2" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bankBalanceAmt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/Submit" />

    <Button
        android:id="@+id/create_new_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bankBalanceAmt"
        android:layout_alignRight="@+id/bankBalanceAmt"
        android:layout_below="@+id/Submit"
        android:layout_marginTop="14dp"
        android:text="@string/create_new_user_btn" />

    <Button
        android:id="@+id/stat_acc_three_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_new_user_btn"
        android:layout_alignRight="@+id/bankdateData"
        android:layout_below="@+id/create_new_user_btn"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password_btn" />

</RelativeLayout>