<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/delete_record_bt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.costtracker_version_02.WelcomeScreenActivity" >

    <Button
        android:id="@+id/stat_acc_one_bt"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/insert_record" />

    <Button
        android:id="@+id/stat_acc_two_bt"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stat_acc_one_bt"
        android:layout_below="@+id/stat_acc_one_bt"
        android:layout_marginTop="22dp"
        android:text="@string/delete_record" />

    <Button
        android:id="@+id/stat_acc_three_bt"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stat_acc_two_bt"
        android:layout_below="@+id/stat_acc_two_bt"
        android:layout_marginTop="14dp"
        android:text="@string/view_record" />

    <Button
        android:id="@+id/stat_view_statement_bt"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stat_acc_three_bt"
        android:layout_below="@+id/stat_acc_three_bt"
        android:layout_marginTop="17dp"
        android:text="@string/update_record" />

</RelativeLayout>